--- a/css/styles.css
+++ b/css/styles.css
@@ -5,107 +5,213 @@
 /* акцент #2196F3 */
 
 :root {
-    --primary-text-color: #757575;
-    --title-text-color: #212121;
-    --accent-color: #2196F3;
-    --background-color: #FFFFFF;
-
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --background-color: #ffffff;
 }
 body {
-background: #ffffff;
-color: var(--primary-text-color);
+  background: #ffffff;
+  color: var(--primary-text-color);
+  font-family: roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .logo {
-
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .logo-web {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .logo-studio {
-    color: #000000;
+  color: #000000;
 }
 
 /* Site nav */
 
 .site-nav .link {
-    color: var(--title-text-color);
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
-.contacts a{
-    color: var(--primary-text-color);
+.site-nav .link.current {
+  color: var(--accent-color);
+}
+
+.contacts a {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .contacts a:hover,
 .contacts a:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
-/* Hero */
+/* Section Hero */
 
-.section.hero {
-    background-color: #2F303A;
+.section-hero {
+  background-color: #2f303a;
 }
 .hero-title {
-    color: #ffffff;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
-/* Section */
-
-.section-title {
-    color: var(--title-text-color);
-}
-
-/* Features */
+/* Section Features */
 
 .future-list .title {
-    color: var(--title-text-color);
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
-/* Team */
+.future-list p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+/* Section we */
+
+.section-we .title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+}
+
+/* Section Team */
+
+.section-team-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+}
 
 .team-list .title {
-    color: var(--title-text-color);
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+}
+
+.team-list p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
 }
 
 /* Footer */
 footer {
-    background-color: #2F303A;
+  background-color: #2f303a;
 }
 
 .logo-studio-footer {
-color: #ffffff;
+  color: #ffffff;
+}
+
+.address {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration: none;
 }
 
 .address-city {
-   color: #FFFFFF; 
+  color: #ffffff;
 }
 
 .address-mail {
-    color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .address-mail:hover,
 .address-mail:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .address-tel {
-    color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .address-tel:hover,
 .address-tel:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
+}
+
+/* Button */
+
+.button {
+  color: var(--title-text-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--background-color);
+  background-color: var(--accent-color);
+}
+.button.hero-button {
+  color: #ffffff;
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+
+/* Portfolio Page*/
+
+.portfolio-list .title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-list p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
 }
